Set identity_theft to True rather than just listing it after if someone_not_ok:

--- a/docassemble/TalkToJudgeAboutDebt/data/questions/TalkToJudgeCR_2019_10_06.yml
+++ b/docassemble/TalkToJudgeAboutDebt/data/questions/TalkToJudgeCR_2019_10_06.yml
@@ -417,7 +417,7 @@ fields:
 ---
 code: |
   if someone_not_ok:
-    identitytheft_debt
+    identitytheft_debt = True
 ---
 question: |
   Is the court where you are going for this case in the same [county](http://www.mass.gov/guides/courthouses-by-county) where you live?
